--- a/artskart.html
+++ b/artskart.html
@@ -83,9 +83,9 @@
 
             <div class="section hidden"  id="notyetvalid" aria-hidden="true">
                 <h2>
-                    <span lang="nb">Laster datasett </span>
-                    <span lang="nn">Laster datasett </span>
-                    <span lang="en">Loading dataset </span>
+                    <span lang="nb">Klargjør datasett </span>
+                    <span lang="nn">Klargjør datasett </span>
+                    <span lang="en">Preparing dataset </span>
                 </h2>
 
                 <div class="progressbar">
